4.2-pl2:
	+ reorganized various analysis algorithm structure
	- removed ultralongfft bpm algorithm
	+ readded the automixer in response to a request by someone
	+ added a better working (but quite somewhat slower) tempo measurement
	  algorithm in bpmcount.
	- removed unnecessary configuration warning regarding algnr 6
	- removed debugging output from the experimental algorithm
	- solved a object ordering error with the new gcc 4.6
4.2-pl1:
        - dsp-jack did not work with variable playrates
        - dsp-alsa gave wrong playrate return info	
4.2:
        - fixed the alsa latency retrieval bug.
	+ allowing different samplerates for the decoded file and soundcard
	- a division by zero in the fft guided rayshooter
	- a bug in the mapping from analysis options to the player: the
	  enveloppe spectrum and rayshoot,fft guidance routines were swapped.
	  You might need to go to the preference boxes if you used any of 
	  these two.
	+ added v1.10.0 for mpg123
4.1pl1:
        - modifications to the taglist could crash the selector
4.1:
	+ faster drawing of main songlist
	- if you had songs that were analyzed and marked as 'Empty' due to 
	  a wrong configuaration (file not accessible for instance) then 
          you might find that BpmDj will not reanalyze this song. You can 
	  fix this problem using the 'Clear Metadata' menuentry in the 
	  in the selection menu.
	- due to the upgrade to qt4 the order of the columns in the 
	  mainsonglist got lost you might need to move all your columns back 
	  in place. 
	+ the renamer dialog can now deal with entries from the songlist
        - wrote documentation on the experiemntal cluster feature
	- a bug in the cluster algorithm
 	- the context menu no longer exists in the song queue, but is
 	  still available in the menubar.
	+ removed more Qt3 dependencies
	+ added midi bindings
	+ added an external clock
	- fixed the screwed up terminal problem.
	+ added the possibility to work on a shared music body. improves 