@@ -1,3 +1,4 @@
+	- fixing rescaling of rhythm pixmaps
 4.2-pl2:
 	+ reorganized various analysis algorithm structure
 	- removed ultralongfft bpm algorithm
